Don't query DNS when statically configuring an interface

Fixes #12399

The Network preferences app was querying DNS to find a hostname
associated with the IP address, netmask and gateway when statically
configuring an interface. This is obviously unecessary and leads to
unexpected blocking when DNS is not available.

Adding B_NO_ADDRESS_RESOLUTION flag to disable the reverse lookup.

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>